--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-    "proxy": "https://mercado.carrefour.com.br",
+  "proxy": "https://mercado.carrefour.com.br",
   "name": "techday",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-      "start": "next start",
-      "export":"next export",
+    "start": "next start",
+    "export": "next export",
     "lint": "next lint"
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "firebase": "^9.8.3",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
