--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-NEXT_PUBLIC_FIREBASE_API_KEY=  "AIzaSyAqtVyXwYJDKxkYNJEDUzwjB4sVADk--6A"
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="carrefour-techday.firebaseapp.com"
-NEXT_PUBLIC_FIREBASE_DATABASE_URL= 
-NEXT_PUBLIC_FIREBASE_PROJECT_ID="carrefour-techday" 
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="carrefour-techday.appspot.com" 
-NEXT_PUBLIC_FIREBASE_API_ID="1:82732177937:web:73a2e5e76b928137ff6fb0"
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="82732177937"  
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyCU_j3wCzPQz63tEX4vrpX9CcY89Diu2Qw
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=techday-carrefour-v2.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=techday-carrefour-v2 
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=techday-carrefour-v2.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=1004086025007
+NEXT_PUBLIC_FIREBASE_API_ID=1:1004086025007:web:3e0e0f4e0d0a4ca7aa1fda
